--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -86,12 +86,32 @@
         </div>
 
         <p class="link-columnas">
-            <a href="#" target="_blank">Aquí</a> algunas de las columnas de <span>Piedra de Toque</span>
+            <a href="https://elcomercio.pe/opinion/piedra-de-toque/" target="_blank">Aquí</a> algunas de las columnas de <span>Piedra de Toque</span>
         </p>
+
+        <div class="box-metodologia">
+            <img src="../img/bg-pdt-2.jpg" alt="" width="100%">
+            <img src="../img/bg-pdt-3.png" alt="" width="100%" class="bg-pdt-3">
+            <div class="info-metodologia">
+                <h5>metodología</h5>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit tincidunt lacus, magna mauris sociis augue non mi senectus dictum, in ridiculus rutrum vitae varius eleifend egestas vivamus. Nisl nceptos facilisis odio conubia interdum platea, mattis uspendisse faucibus cubilia dis vivamus, ut maecenas mauri. 
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit tincidunt lacus, magna mauris sociis augue non mi senectus dictum, in ridiculus rutrum vitae varius eleifend egestas vivamus. Nisl nceptos facilisis odio conubia interdum platea, mattis uspendisse faucibus cubilia dis vivamus, ut maecenas mauri.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit tincidunt lacus, magna mauris sociis augue non mi senectus dictum, in ridiculus rutrum vitae varius eleifend egestas vivamus. Nisl nceptos facilisis odio conubia interdum platea, mattis uspendisse faucibus cubilia dis vivamus, ut maecenas mauri.
+                </p>
+            </div>
+            <img src="../img/bg-pdt-4.png" alt="" width="100%" class="bg-pdt-4">
+            <img src="../img/bg-pdt-5.jpg" alt="" width="100%">
+        </div>
+        <img src="../img/bg-pdt-6.jpg" alt="" width="100%">
 
     </div>
 
-    <div class="box-footer">
+    <div class="box-footer footer-pdt">
         <img src="https://nuevasnarrativasec.github.io/edificio-comercio-centenario/img/logo-comercio.png" alt="" width="100%">
         <ul>
             <li>
