--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -38,7 +38,7 @@
     <div class="header-interior header-interior-capitulo-1">
         <h5>Capítulo 1</h5>
         <img src="../img/icon-pdt.png" alt="" width="100%">
-        <h1>chatbot pdt</h1>
+        <h1>Descubre Piedra de Toque</h1>
         <h3>LOREM IPSUM DOLOR SIT AMET</h3>
     </div>
 
@@ -57,7 +57,7 @@
             <span class="separador-autor"></span>
         </div>
 
-        <h4>¿Quieres descubrir piedra de toque como nunca antes?</h4>
+        <h4>¿Quieres conocer las columnas de MVLL como nunca antes?</h4>
 
         <p class="bajada-pdt">
             Hemos creado un asistente virtual único, entrenado con todas las columnas Piedra de Toque de Mario Vargas Llosa publicadas en El Comercio entre 1991 y 2023. Un corpus de 261 artículos, ahora a tu alcance con ayuda de la inteligencia artificial.
@@ -95,13 +95,10 @@
             <div class="info-metodologia">
                 <h5>metodología</h5>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit tincidunt lacus, magna mauris sociis augue non mi senectus dictum, in ridiculus rutrum vitae varius eleifend egestas vivamus. Nisl nceptos facilisis odio conubia interdum platea, mattis uspendisse faucibus cubilia dis vivamus, ut maecenas mauri. 
+                    El chatbot para las columnas Piedra de Toque de Mario Vargas Llosa combina NLP con recuperación de información estructurada y no estructurada. Usa LangChain para consultas automáticas en SQLite sin SQL explícito y Pinecone para buscar embeddings semánticamente relevantes.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit tincidunt lacus, magna mauris sociis augue non mi senectus dictum, in ridiculus rutrum vitae varius eleifend egestas vivamus. Nisl nceptos facilisis odio conubia interdum platea, mattis uspendisse faucibus cubilia dis vivamus, ut maecenas mauri.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit tincidunt lacus, magna mauris sociis augue non mi senectus dictum, in ridiculus rutrum vitae varius eleifend egestas vivamus. Nisl nceptos facilisis odio conubia interdum platea, mattis uspendisse faucibus cubilia dis vivamus, ut maecenas mauri.
+                    El flujo incluye clasificación de preguntas, recuperación de datos y generación de respuestas con GPT-3.5-turbo. Las interacciones se almacenan en Supabase para mejorar su precisión. Esta metodología permite respuestas precisas y contextualizadas sobre las columnas.
                 </p>
             </div>
             <img src="../img/bg-pdt-4.png" alt="" width="100%" class="bg-pdt-4">
