--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -400,7 +400,7 @@
                     <h6>Historia de Mayta</h6>
                 </div>
             </div>
-            <div class="box-item-timeline padding-top-190">
+            <div class="box-item-timeline padding-top-190 padding-bottom-100">
                 <div class="box-portada-obra">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -537,7 +537,7 @@
                     <h6>El Loco de los Balcones</h6>
                 </div>
             </div>
-            <div class="box-item-timeline padding-top-190">
+            <div class="box-item-timeline padding-top-190 padding-bottom-190-2">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -756,7 +756,7 @@
                     <h6>El Paraíso en la Otra Esquina</h6>
                 </div>
             </div>
-            <div class="box-item-timeline padding-top-190 padding-bottom-2035">
+            <div class="box-item-timeline padding-top-190 padding-bottom-2035 padding-bottom-2035-2">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
