--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -1170,7 +1170,7 @@
                     <h6>El Héroe Discreto</h6>
                 </div>
             </div>
-            <div class="box-item-timeline padding-top-190 padding-bottom-1039">
+            <div class="box-item-timeline padding-top-190 padding-bottom-1039 padding-bottom-1039-2">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -1391,7 +1391,7 @@
         </div>
 
         <div class="box-columna-izq">
-            <div class="box-item-timeline">
+            <div class="box-item-timeline padding-bottom-95">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -1401,7 +1401,7 @@
                     <h6>Medio Siglo con Borges</h6>
                 </div>
             </div>
-            <div class="box-item-timeline">
+            <div class="box-item-timeline padding-bottom-110">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -1411,7 +1411,7 @@
                     <h6>Los Vientos</h6>
                 </div>
             </div>
-            <div class="box-item-timeline">
+            <div class="box-item-timeline padding-bottom-70">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
