--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -403,7 +403,7 @@
                     <h6>Historia de Mayta</h6>
                 </div>
             </div>
-            <div class="box-item-timeline padding-top-190 padding-bottom-100">
+            <div class="box-item-timeline padding-top-190 padding-bottom-100 padding-top-190-2">
                 <div class="box-portada-obra">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -416,7 +416,7 @@
                     <h6>La Chunga</h6>
                 </div>
             </div>
-            <div class="box-item-timeline">
+            <div class="box-item-timeline padding-bottom-82">
                 <div class="box-portada-obra">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -504,7 +504,7 @@
         </div>
 
         <div class="box-columna-izq">
-            <div class="box-item-timeline padding-bottom-105">
+            <div class="box-item-timeline padding-bottom-105 padding-top-50">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -540,7 +540,7 @@
                     <h6>El Loco de los Balcones</h6>
                 </div>
             </div>
-            <div class="box-item-timeline padding-top-190 padding-bottom-190-2">
+            <div class="box-item-timeline padding-top-190 padding-bottom-190-2 padding-top-190-3">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
@@ -1173,7 +1173,7 @@
                     <h6>El Héroe Discreto</h6>
                 </div>
             </div>
-            <div class="box-item-timeline padding-top-190 padding-bottom-1039 padding-bottom-1039-2">
+            <div class="box-item-timeline padding-top-190 padding-bottom-1039 padding-bottom-1039-2 padding-bottom-1039-3">
                 <div class="box-portada-obra opacity">
                     <img src="../img/bg-timeline-1.jpg" alt="" width="100%">
                 </div>                
