--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -39,7 +39,7 @@
         <h5>Capítulo 1</h5>
         <img src="../img/icon-pdt.png" alt="" width="100%">
         <h1>Descubre Piedra de Toque</h1>
-        <!--<h3>LOREM IPSUM DOLOR SIT AMET</h3>-->
+        <h3>¿Quieres conocer las columnas de MVLL como nunca antes?</h3>
     </div>
 
     <div class="box-main-pdt">
@@ -57,7 +57,7 @@
             <span class="separador-autor"></span>
         </div>
 
-        <h4>¿Quieres conocer las columnas de MVLL como nunca antes?</h4>
+        <!--<h4>¿Quieres conocer las columnas de MVLL como nunca antes?</h4>-->
 
         <p class="bajada-pdt">
             Hemos creado un asistente virtual único, entrenado con todas las columnas Piedra de Toque de Mario Vargas Llosa publicadas en El Comercio entre 1991 y 2023. Un corpus de 261 artículos, ahora a tu alcance con ayuda de la inteligencia artificial.
