--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -39,7 +39,7 @@
         <h5>Capítulo 1</h5>
         <img src="../img/icon-pdt.png" alt="" width="100%">
         <h1>Descubre Piedra de Toque</h1>
-        <h3>¿Quieres conocer las columnas de MVLL como nunca antes?</h3>
+        <h3>¿Quieres conocer las columnas de MVLL como nunca antes? <span style="font-weight: bold;">Conversa con nuestro CHATBOT</span></h3>
     </div>
 
     <div class="box-main-pdt">
