--- a/capitulo-1/index.html
+++ b/capitulo-1/index.html
@@ -49,7 +49,7 @@
 
         <!--<h4>¿Quieres conocer las columnas de MVLL como nunca antes?</h4>-->
 
-        <p class="bajada-pdt">
+        <p class="bajada-pdt" style="margin-top: -175px;">
             Hemos creado un asistente virtual único, entrenado con todas las columnas Piedra de Toque de Mario Vargas Llosa publicadas en El Comercio entre 1991 y 2023. Un corpus de 261 artículos, ahora a tu alcance con ayuda de la inteligencia artificial.
         </p>
         <p class="bajada-pdt">
@@ -100,7 +100,7 @@
 
     <div class="box-footer footer-pdt">
 
-        <div class="box-main-autor">
+        <!--<div class="box-main-autor">
             <span class="separador-autor"></span>
             <div class="box-autor">
                 <img src="../img/bg-autor.png" alt="" width="100%">
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <span class="separador-autor"></span>
-        </div>
+        </div>-->
 
         <img src="https://nuevasnarrativasec.github.io/edificio-comercio-centenario/img/logo-comercio.png" alt="" width="100%">
         <ul>
