--- a/capitulo-5/index.html
+++ b/capitulo-5/index.html
@@ -42,7 +42,7 @@
             La vida política del Nobel de literatura tuvo de todo. Según relató él mismo en su autobiografía, fue nieto de un prefecto, alguna vez organizó una huelga en su colegio y militó en una cédula comunista durante sus años universitarios. Luego, fue escritor de discursos para un candidato, trabajador del Congreso y, en más de una ocasión, le ofrecieron ser ministro de Estado. En lo ideológico, pasó de ser simpatizante a opositor del socialismo, hasta establecerse como
         </p>  
         <span class="separador"></span>      
-        <p>
+        <p style="max-width: 320px;">
             un connotado liberal. Sin embargo, el episodio que lo marcó fue su liderazgo del Fredemo en los últimos años del primer gobierno de Alan García y su posterior postulación presidencial en 1990. Todo ello enarbolando una ideología liberal y la defensa del libre mercado como principales estandartes. Si bien su candidatura fue ahogada por el "tsunami Fujimori", su apuesta por el liberalismo tuvo eco en las décadas siguientes.
         </p>
     </div>
