--- a/menu/index.html
+++ b/menu/index.html
@@ -106,13 +106,13 @@
         // Cargar imágenes en espiral con enlaces correspondientes y títulos
         const mediaItems = [
             // Ya no incluimos la imagen central en este array
-            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-1/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2-2.mp4', link: '../capitulo-1/index.html', title: '', type: 'video' },
             { url: '../videos/video-vargas-3.mp4', link: '../capitulo-2/index.html', title: '', type: 'video' },
             { url: '../videos/video-vargas-4.mp4', link: '../capitulo-3/index.html', title: '', type: 'video' },
             { url: '../videos/video-vargas-5.mp4', link: '../capitulo-4/index.html', title: '', type: 'video' },
             { url: '../videos/video-vargas-6.mp4', link: '../capitulo-5/index.html', title: '', type: 'video' },
             { url: '../videos/video-vargas-7.mp4', link: '../capitulo-6/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-7/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-8.mp4', link: '../capitulo-7/index.html', title: '', type: 'video' },
             { url: '../videos/video-vargas-9.mp4', link: '../capitulo-8/index.html', title: '', type: 'video' }
         ];        
 
