--- a/capitulo-5/index.html
+++ b/capitulo-5/index.html
@@ -64,9 +64,9 @@
             Desde su génesis, la poiesis de Mario Vargas Llosa, su proyecto narrativo, abordó las políticas del poder. En particular, las del Perú de mediados del siglo XX, donde están ambientados sus primeros cuentos y novelas. De hecho, cuando ganó el Nobel de Literatura, lo hizo por “su cartografía de las estructuras de poder y su mordaz retrato de la resistencia individual, la sublevación y la derrota". En correlato, su biografía evidencia una larga y mutante relación con la herramienta con la que se ejerce el poder: la política, propiamente dicha.
         </p>
         <div class="box-foto-textos">
-            <img src="../img/bg-galeria-1.jpg" alt="" width="100%">
+            <img src="../img/bg-politica-1.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+                Mario Vargas Llosa durante una actividad electoral en Huaycán, como parte deu su campaña presidencial de 1990. Fuente: Diario Ojo-Epensa
             </p>
         </div>
         <h3>
@@ -83,9 +83,9 @@
         </p>
 
         <div class="box-foto-textos">
-            <img src="../img/bg-galeria-1.jpg" alt="" width="100%">
+            <img src="../img/bg-politica-2.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+                Mario Vargas Llosa de visita en el Colegio Leoncio Prado en noviembre del 2024, 74 años después de haber ingresado por primera vez a sus aulas. Foto: Cuenta de X de Álvaro Vargas Llosa 
             </p>
         </div>
         <h3>
@@ -102,9 +102,9 @@
         </p>
 
         <div class="box-foto-textos">
-            <img src="../img/bg-galeria-1.jpg" alt="" width="100%">
+            <img src="../img/bg-politica-3.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+                Mario Vargas Llosa durante un mitin previo a las elecciones de 1990, como líder del Movimiento Libertad y la alianza Fredemo. Foto: Archivo El Comercio
             </p>
         </div>
         <h3>
@@ -124,9 +124,9 @@
         </p>
 
         <div class="box-foto-textos">
-            <img src="../img/bg-galeria-1.jpg" alt="" width="100%">
+            <img src="../img/bg-politica-4.jpg" alt="" width="100%">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut.
+                Fernando Belaunde Terry, Mario Vargas Llosa y Luis Bedoya Reyes, líderes de la alianza Fredemo, durante una conferencia en 1988. Foto: Archivo El Comercio
             </p>
         </div>
         <h3>
@@ -147,6 +147,12 @@
         <p>
             Si bien era el favorito, terminó siendo derrotado por un entonces desconocido Alberto Fujimori. En sus memorias, el novelista atribuye su derrota a varios factores”. “Tuve mucha responsabilidad en el fracaso, por centrar toda la campaña en la defensa de un programa de gobierno, descuidar los aspectos exclusivamente políticos, denotar intransigencia y mantener, de principio a fin, una transparencia de propósitos que me volvió vulnerable a los ataques y a las operaciones de descrédito y que asustó a muchos de mis iniciales partidarios”.
         </p>
+        <div class="box-foto-textos">
+            <img src="../img/bg-politica-5.jpg" alt="" width="100%">
+            <p>
+                Mario Vargas llosa durante un mitín del Fredemo en la campaña presidencial de 1990. <br>Foto: Archivo El Comercio
+            </p>
+        </div>
         <p>
             A lo largo de ‘El pez en el agua’, Vargas Llosa también señala otros factores en su derrota: la inexperiencia política de sus partidarios, la falta de coherencia en su alianza electoral, la excesiva publicidad de sus candidatos al Congreso y la férrea oposición de la izquierda y el Apra, entonces partido de gobierno. De esos años, el novelista concluyó que la política consiste “casi exclusivamente de maniobras, intrigas, conspiraciones, pactos, paranoias, traiciones, mucho cálculo, no poco cinismo y toda clase de malabares”.
         </p>
