--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -21,15 +21,19 @@
                 Inicio
             </a>            
         </div>
-        <div class="menu-button capitulo anterior">
+        <div class="menu-button capitulo anterior last">
             <a href="../capitulo-7/index.html">
                 <img src="../img/flecha-izq.png" alt="" width="100%">
-                Capítulo anterior
+                <p>
+                    Capítulo anterior
+                </p>               
             </a>  
         </div>
-        <div class="menu-button capitulo siguiente">
-            <a href="#">               
-                Capítulo siguiente
+        <div class="menu-button capitulo siguiente none">
+            <a href="#">     
+                <p>
+                    Capítulo siguiente
+                </p>  
                 <img src="../img/flecha-der.png" alt="" width="100%">
             </a>
         </div>
