--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -99,7 +99,7 @@
     </p>
 
     <p class="texto-premios">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Los relatos de Vargas Llosa se desarrollan en distintos rincones del mundo. En sus obras principales se mencionan diez países y 25 ciudades. El país más recurrente es República Dominicana (113 menciones). Para el conteo, se utilizó una metodología que combina IA y NPL, que analizó los libros más aclamados por la crítica: La Fiesta del Chivo, La Ciudad y los Perros, La Casa Verde, Conversación en la Catedral y La Guerra del Fin del Mundo. Explora en este mapa los lugares que han dado vida a las historias del inmortal novelista.
     </p>
 
     <div class="box-iframe">
@@ -108,6 +108,11 @@
         <iframe title="" aria-label="Mapa" id="datawrapper-chart-Xbzp9" src="https://datawrapper.dwcdn.net/Xbzp9/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="294" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
         </script>
     </div>
+
+    <h5 class="sub-metodologia-mapa">metodología</h5>
+    <p class="texto-premios texto-metodologia-mapa">
+        Para el conteo de menciones, se extrajeron nombres de ciudades y países de novelas en PDF mediante conversión de texto, limpieza y análisis con modelos de reconocimiento de entidades como spaCy o IA generativa (GPT Plus). Se validaron los resultados con bases de datos geográficas y se analizaron las menciones para identificar su contexto y frecuencia.
+    </p>
 
     <span class="separador-seccion"></span>
     <h4 class="seccion">obras y recomendaciones</h4>
