--- a/capitulo-5/index.html
+++ b/capitulo-5/index.html
@@ -69,8 +69,8 @@
         </p>
         <div class="box-foto-textos">
             <img src="../img/bg-politica-1.jpg" alt="" width="100%">
-            <p>
-                Mario Vargas Llosa durante una actividad electoral en Huaycán, como parte deu su campaña presidencial de 1990. Fuente: Diario Ojo-Epensa
+            <p class="leyenda-foto-politica">
+                Mario Vargas Llosa durante una actividad electoral en Huaycán, como parte deu su campaña presidencial de 1990. Foto: El Comercio
             </p>
         </div>
         <h3>
@@ -88,7 +88,7 @@
 
         <div class="box-foto-textos">
             <img src="../img/bg-politica-2.jpg" alt="" width="100%">
-            <p>
+            <p class="leyenda-foto-politica">
                 Mario Vargas Llosa de visita en el Colegio Leoncio Prado en noviembre del 2024, 74 años después de haber ingresado por primera vez a sus aulas. Foto: Cuenta de X de Álvaro Vargas Llosa 
             </p>
         </div>
@@ -107,7 +107,7 @@
 
         <div class="box-foto-textos">
             <img src="../img/bg-politica-3.jpg" alt="" width="100%">
-            <p>
+            <p class="leyenda-foto-politica">
                 Mario Vargas Llosa durante un mitin previo a las elecciones de 1990, como líder del Movimiento Libertad y la alianza Fredemo. Foto: Archivo El Comercio
             </p>
         </div>
@@ -129,7 +129,7 @@
 
         <div class="box-foto-textos">
             <img src="../img/bg-politica-4.jpg" alt="" width="100%">
-            <p>
+            <p class="leyenda-foto-politica">
                 Fernando Belaunde Terry, Mario Vargas Llosa y Luis Bedoya Reyes, líderes de la alianza Fredemo, durante una conferencia en 1988. Foto: Archivo El Comercio
             </p>
         </div>
@@ -153,7 +153,7 @@
         </p>
         <div class="box-foto-textos">
             <img src="../img/bg-politica-5.jpg" alt="" width="100%">
-            <p>
+            <p class="leyenda-foto-politica">
                 Mario Vargas llosa durante un mitín del Fredemo en la campaña presidencial de 1990. <br>Foto: Archivo El Comercio
             </p>
         </div>
