--- a/capitulo-7/index.html
+++ b/capitulo-7/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <ul class="notas-nobel">
-        <li id="nota-nobel-1">
+        <li id="nota-nobel-1" class="active-notas-nobel">
             La semana de Nobel
         </li>
         <li id="nota-nobel-2">
