--- a/capitulo-5/index.html
+++ b/capitulo-5/index.html
@@ -54,7 +54,7 @@
     <div class="box-main-autor">
         <span class="separador-autor"></span>
         <div class="box-autor">
-            <img src="../img/bg-autor.png" alt="" width="100%">
+            <img src="../img/bg-autor-reyes.png" alt="" width="100%">
             <div class="info-autor">
                 <h5>Victor Reyes</h5>
                 <h6>Redactor de Política</h6>
