--- a/capitulo-2/index.html
+++ b/capitulo-2/index.html
@@ -54,7 +54,7 @@
     <div class="box-main-autor">
         <span class="separador-autor"></span>
         <div class="box-autor">
-            <img src="../img/bg-autor.png" alt="" width="100%">
+            <img src="../img/bg-autor-planas-naranja.png" alt="" width="100%">
             <div class="info-autor">
                 <h5>Enrique Planas</h5>
                 <h6>Editor de El Dominical</h6>
