--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -54,7 +54,7 @@
     <div class="box-main-autor">
         <span class="separador-autor"></span>
         <div class="box-autor">
-            <img src="../img/bg-autor.png" alt="" width="100%">
+            <img src="../img/bg-autor-alfonso.png" alt="" width="100%">
             <div class="info-autor">
                 <h5>Alfonso Rivadeneyra</h5>
                 <h6>Redactor de Luces</h6>
