--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -1628,7 +1628,7 @@
             maxZoom: 20,
             attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
             ext: 'png'
-        }).addTo(map);;
+        }).addTo(map);
 
         L.control.zoom({
             position: "bottomright"
