--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -41,6 +41,7 @@
 
     <div class="header-interior header-interior-capitulo-9">
         <h5>Capítulo 8</h5>
+        <img src="https://d1ts5g4ys243sh.cloudfront.net/proyectos_especiales_prod/especiales-multimedia/ecdata/img/logo-ecdata.png" alt="ECData" width="100%" class="logo-ecdata">
         <h1>en cada esquina de sus letras:</h1>
         <h3>LAS CIFRAS Y LUGARES DE SU UNIVERSO LITERARIO DE MARIO VARGAS LLOSA</h3>    
     </div>    
