--- a/capitulo-8/index.html
+++ b/capitulo-8/index.html
@@ -1619,18 +1619,6 @@
             zoomControl: false 
         });
 
-        // Agregar capa base
-        /*L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; OpenStreetMap contributors'
-        }).addTo(map);*/
-
-        /*var Stadia_AlidadeSmooth = L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.{ext}', {
-            minZoom: 0,
-            maxZoom: 20,
-            attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
-            ext: 'png'
-        }).addTo(map);*/
-
         var Esri_WorldGrayCanvas = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}', {
             attribution: 'Tiles &copy; Esri &mdash; Esri, DeLorme, NAVTEQ',
             minZoom: 0,
@@ -1708,6 +1696,12 @@
             circle.on("mouseout", function () {
                 this.setStyle({ fillOpacity: 0.7 }); // Vuelve a su opacidad original
                 map.closePopup(); // Cierra el popup al quitar el mouse
+            });
+
+            // Evento para mostrar el popup en móviles con tap/click
+            circle.on("click", function () {
+                this.setStyle({ fillOpacity: 1 });
+                popup.setLatLng(this.getLatLng()).openOn(map);
             });
         });
     </script>
